
=== Version 3.3.0 (KDE Applications 21.08) --- 21 July 2021 ===
* Add date selector option to enable alarm list view to be filtered.
* Show hamburger menu when menu bar is hidden, to allow access to all options.
* Fix crash when context menu is requested after toolbar has been edited.
* Fix crash when alarm message is shown on a multiple screen system using Wayland [KDE Bug 439853]
* Fixes to dialogue layouts when using right-to-left languages.

=== Version 3.2.2 (KDE Applications 21.04.2) --- 26 May 2021 ===
* In audio alarm edit dialogue, don't show file name in encoded format [KDE Bug 437676]

=== Version 3.2.1 (KDE Applications 21.04.1) --- 6 May 2021 ===
* In alarm list, don't hide display alarm colour for selected alarms [KDE Bug 436434]
* Fix date sometimes being hidden for selected alarms in alarm list [KDE Bug 436434]
* In alarm edit dialogue, enable OK button when date is edited [KDE Bug 436558]
* If time format is AM/PM, allow zero hours as an interim value while editing times.

=== Version 3.2.0 (KDE Applications 21.04) --- 2 April 2021 ===
* Remove KAlarm Akonadi resource code.
* Rename Preferences 'Edit' tab to 'Alarm Defaults'.
* Add default sound volume setting to Preferences dialogue.
* Fix erroneous output of terminal error message on disabling a calendar.

=== Version 3.1.3 (KDE Applications 20.12.3) --- 19 February 2021 ===
* Fix error creating alarm from command line if the only active alarm calendar is not the default [KDE Bug 417108].
* If command line action fails, quit application if not previously running.

=== Version 3.1.2 (KDE Applications 20.12.2) --- 26 January 2021 ===
* Default to using alarm names.
* Fix hang when an alarm is triggered in a read-only resource.

=== Version 3.1.1 (KDE Applications 20.12.1) --- 18 December 2020 ===
* Ensure that build uses the file resources option.
* When removing duplicate Akonadi resources, in priority keep enabled/standard ones.
* Fix regression introduced in version 3.1.0: